<resources>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_preferences">Preferencias</string>
    <string name="menu_contact_us">CONTACTO\n</string>
    <string name="menu_about_us">Sobre Nosotros</string>
    <string name="app_name">Marfol</string>
    <string name="button_intro">¡ A \nPagar !</string>
    <string name="nombre">Nombre:</string>
    <string name="telefono">Teléfono:</string>
    <string name="prompt_email">Email *</string>
    <string name="prompt_password">Password *</string>
    <string name="guardar">Guardar</string>
    <string name="recuperar">Recuperar</string>
    <string name="borrar">Borrar</string>
    <string name="logout">Logout</string>
    <string name="registrarse">Registrarse</string>
    <string name="google">Google</string>
    <string name="prefs_file">com.tfg.marfol.PREFERENCE_FILE_KEY</string>
    <string name="participantes">Comensales</string>
    <string name="volver">Volver</string>
    <string name="desea_volver">Perderás los participantes</string>
    <string name="confirmacion_volver">¿Estás seguro de que deseas volver?</string>
    <string name="atencion_msg">Atención</string>
    <string name="entrar">Entrar</string>
    <string name="editar">Editar</string>
    <string name="pop_confirmacion1">CONFIRMAR</string>
    <string name="pop_cancelar1">CANCELAR</string>
    <string name="pop_noGuardar">NO GUARDAR</string>
    <string name="pop_Guardar">GUARDAR</string>
    <string name="anadir_participante">Añadir \nComensal</string>
    <string name="anadir_plato">Añadir \nPlato - Bebida</string>
    <string name="etnombreanadir_participante">Nombre:</string>
    <string name="etdescripcionanadir_participante">Descripción:</string>
    <string name="tvlistaplatosanadir_participante">Platos</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="repetirPassw">Repetir password *</string>
    <string name="enviar">Enviar</string>
    <string name="btneditar_detalle">Editar</string>
    <string name="btnborrar_detalle">Borrar</string>
    <string name="olvidada"><u>¿Contraseña olvidada?</u></string>
    <string name="contraseñaOlvidada">Correo del usuario</string>
    <string name="continuar_platos">Continuar</string>
    <string name="tvrow_participante">Platos y Bebidas</string>
    <string name="tvrow_compartir">Compartir con...</string>
    <string name="swCompartir_Plato">¿Compartir?</string>
    <string name="tvPrecio">€</string>
    <string name="btnvolver_detalle">Volver</string>
    <string name="btnguardar_restaurante">Guardar</string>
    <string name="tvdesglose">Desglose</string>
    <string name="correoHome">Correo: </string>
    <string name="google_maps_key">AIzaSyC1JbQNg7WkFD4zGdVr1Y-RkaWtluXStKE</string>
    <string name="API">Restaurantes\ncercanos</string>
    <string name="recordar_plato">Volver a añadir...</string>
    <string name="compartir_con">Compartir con</string>
    <!-- STRING PARA PUP UP DESGLOSE -->
    <string name="popup_guardar_desglose">Guardar</string>
    <string name="popup_text1_desglose">¿ Deseas guardar el restaurante ?</string>
    <string name="popup_text2_desglose">Podrás recordar los platos muy fácilmente</string>
    <string name="popup_edit_desglose">Nombre restaurante</string>
    <!-- FIN STRING PARA PUP UP DESGLOSE -->
    <!-- ROW PLATO RECORDAR -->
    <string name="plato_nombre_nuevo">NUEVO</string>
    <string name="plato_precio_nuevo">PLATO</string>
    <!-- FIN ROW PLATO RECORDAR -->
    <!-- TextView Recordar -->
    <string name="tv_recordar_par">Participantes añadidos anteriormente</string>
    <string name="tv_recordar_pla">Platos añadidos anteriormente</string>
    <!-- FIN TextView Recordar -->
    <!-- PopUp Accion -->
    <string name="pop_up_galeria">GALERÍA</string>
    <string name="pop_up_camara">CÁMARA</string>
    <!-- FIN PopUp Accion -->
    <string name="restaurantes">Restaurantes</string>
    <string name="personas">Personas</string>
    <string name="platos">Platos</string>
</resources>