<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_style"
    tools:context="mainActivity.menu.crudBd.Seleccion">

    <Button
        android:id="@+id/btnCrudPersona"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/platorow_styledes"
        android:text="@string/personas"
        android:textColor="@color/redLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCrudPlatos"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/row_platos_bd"
        android:text="@string/platos"
        android:textColor="@color/purplePlatos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCrudRestaurantes"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCrudRestaurantes"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/row_gpt_restaurantes"
        android:text="@string/restaurantes"
        android:textColor="@color/blueRestaurantes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCrudPersona" />


</androidx.constraintlayout.widget.ConstraintLayout>