<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_style"
    tools:context="mainActivity.menu.crudBd.detalle.DetalleEditarPersonaBd">


    <EditText
        android:id="@+id/etDetalleNombreEditarPersona"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/nombre"
        android:textColor="@color/redBorder"
        android:textSize="30sp"
        android:textColorHint="@color/redSLight"
        android:background="@drawable/platorow_styledes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDetalleDescripcionEditarPersona"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/platorow_styledes"
        android:fontFamily="serif"
        android:gravity="top|left"
        android:hint="@string/etdescripcionanadir_participante"
        android:maxLength="80"
        android:padding="10dp"
        android:textColor="@color/redTitle"

        android:textColorHint="@color/redSLight"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDetalleFotoEditarPersona" />

    <ImageView
        android:id="@+id/ivDetalleFotoEditarPersona"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDetalleNombreEditarPersona" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBorrarDetalleEditarPersona"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:background="@drawable/button_borrar"
        android:text="@string/btnborrar_detalle"
        android:textColor="@color/yellowMargin"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etDetalleDescripcionEditarPersona"
        app:layout_constraintTop_toBottomOf="@+id/etDetalleDescripcionEditarPersona"
        app:layout_constraintVertical_bias="0.287" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEditarDetalleEditarPersona"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:background="@drawable/platorow_styledes"
        android:text="@string/btneditar_detalle"
        android:textColor="@color/redTitle"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/etDetalleDescripcionEditarPersona"
        app:layout_constraintTop_toBottomOf="@+id/etDetalleDescripcionEditarPersona"
        app:layout_constraintVertical_bias="0.288" />

</androidx.constraintlayout.widget.ConstraintLayout>