<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_style"
    tools:context="mainActivity.crud.AnadirParticipanteActivity">

    <!-- Title Actividad -->
    <TextView
        android:id="@+id/tvTitleAnadirPlato"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/anadir_participante"
        android:textColor="@color/redBorder"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />



    <!-- Menu APP -->

    <!-- Login App -->

    <ImageView
        android:id="@+id/ivAnadirPlatoImagen"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_style"
        android:scaleType="fitCenter"
        android:src="@drawable/nologinimg"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toEndOf="@+id/tvTitleAnadirPlato"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombreAnadirPlato"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/platorow_styledes"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/etnombreanadir_participante"
        android:maxLength="16"

        android:padding="10dp"
        android:textColor="@color/redTitle"
        android:textColorHint="@color/redSLight"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAnadirPlato" />

    <EditText
        android:id="@+id/etDescripcionAnadirPlato"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/platorow_styledes"
        android:fontFamily="serif"
        android:gravity="top|left"
        android:hint="@string/etdescripcionanadir_participante"
        android:maxLength="80"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:textColor="@color/redTitle"


        android:textColorHint="@color/redSLight"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreAnadirPlato" />

    <ImageView
        android:id="@+id/ivPlatoAnadirPlato"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/platorow_styledes"

        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcionAnadirPlato" />

    <TextView
        android:id="@+id/tvListaPlatosAnadirPlato"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/row_platos_bd"
        android:fontFamily="serif"
        android:gravity="center"
        android:maxLength="16"
        android:padding="10dp"
        android:text="@string/tvrow_participante"
        android:textColor="@color/redTitle"

        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlatoAnadirPlato" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlatosAnadirPlato"
        android:layout_width="284dp"
        android:layout_height="206dp"

        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvListaPlatosAnadirPlato" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlatosAnadirPlato"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:background="@drawable/platorow_styledes"
        android:text="@string/continuar_platos"
        android:textColor="@color/redLight"
        android:textSize="22dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvPlatosAnadirPlato" />


</androidx.constraintlayout.widget.ConstraintLayout>